--- a/test/test.html
+++ b/test/test.html
@@ -5,20 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<button type="button" onclick="support_Practice_Function_1_Bai_4()">cbcb</button>
-<script>
-    function support_Practice_Function_1_Bai_4() {
-        let firstNum = 4;
-        let secondNum = 8;
-        result = firstNum + secondNum;
-        alert(result);
-        return result;
-
-    }
-
-    result = 0;
-    result = support_Practice_Function_1_Bai_4();
-
-</script>
+<input type="number">
 </body>
 </html>
