--- a/test/Case Study/case_study.html
+++ b/test/Case Study/case_study.html
@@ -89,300 +89,24 @@
 <h2>Bài 1: Viết một hàm chuẩn hóa xâu ký tự: biến đổi xâu ký tự thành xâu sao cho trong xâu không có 2 dấu cách liền nhau và bắt đầu mỗi từ phải in hoa. Ví dụ tRuong    TaN   HAI => Truong Tan Hai.</h2>
 <h2>Và một hàm tìm từ dài nhất trong 1 xâu ký tự. Hàm main sử dụng các hàm này để nhập xâu ký tự từ bàn phím, in ra xâu trước và sau khi chuẩn hóa, 1 từ dài nhất trong xâu đó.</h2>
 <button type="button" onclick="part4CaseStudyBai1()">Bài 1</button>
+
+<script src="part1CaseStudyBai1.js"></script>
+<script src="part1CaseStudyBai2.js"></script>
+<script src="part1CaseStudyBai3.js"></script>
+<script src="part1CaseStudyBai4.js"></script>
+<script src="part2CaseStudyBai1.js"></script>
+<script src="part2CaseStudyBai2.js"></script>
+<script src="part3CaseStudyBai1.js"></script>
+<script src="part3CaseStudyBai2.js"></script>
+<script src="part3CaseStudyBai3.js"></script>
+<script src="part3CaseStudyBai4.js"></script>
+<script src="part3CaseStudyBai5.js"></script>
+
 <script>
-    function part1CaseStudyBai1() {
-        let n = +prompt("Nhập vào đây chiều dài của hình chữ nhật"); // hàng
-        let m = +prompt("Nhập vào đây chiều rộng của hình chữ nhật");// cột
-        let print_To_The_Screen = "";
-        for (let i = 0; i < m; i++) {
-            for (let j = 0; j < n; j++) {
-                if (i === 0 || j === 0 || j === n - 1 || i === m - 1) {
-                    print_To_The_Screen += "* ";
-                } else {
-                    print_To_The_Screen += "&nbsp;&nbsp;&nbsp";
-                }
-            }
-            print_To_The_Screen += "<br>";
-        }
-        document.write(print_To_The_Screen);
-    }
-
-    function part1CaseStudyBai2() {
-        let h = +prompt("Nhập vào đây chiều cao của tam giác vuông cân rỗng");
-        let print_To_The_Screen = "";
-        for (let i = 0; i < h; i++) {
-            for (let j = 0; j <= i; j++) {
-                if (j === 0 || j === i || i === h - 1) {
-                    print_To_The_Screen += "* ";
-                } else {
-                    print_To_The_Screen += "&nbsp;&nbsp;&nbsp";
-                }
-            }
-            print_To_The_Screen += "<br>";
-        }
-        document.write(print_To_The_Screen);
-    }
-
-    function part1CaseStudyBai3() {
-        let h = +prompt("Nhập vào đây chiều cao của tam giác cân đặc");
-        let x = h;
-        let a = h - 1;
-        let print_To_The_Screen = "";
-        for (let i = 0; i < h; i++) {
-            for (let j = 0; j < x; j++) {
-                if (j === x - 1 || j > a - 1) {
-                    print_To_The_Screen += "*";
-                } else {
-                    print_To_The_Screen += "&nbsp;&nbsp";
-                }
-            }
-            x++;
-            a--;
-            print_To_The_Screen += "<br>";
-        }
-        document.write(print_To_The_Screen);
-    }
-
-    function part1CaseStudyBai4() {
-        let h = +prompt("Nhập vào đây chiều cao của tam giác cân rỗng ruột");
-        let x = h;
-        let a = h - 1;
-        let print_To_The_Screen = "";
-        for (let i = 0; i < h; i++) {
-            for (let j = 0; j < x; j++) {
-                if (j === x - 1 || j === a || i === h - 1) {
-                    print_To_The_Screen += "* ";
-                } else {
-                    print_To_The_Screen += "&nbsp;&nbsp;&nbsp";
-                }
-            }
-            x++;
-            a--;
-            print_To_The_Screen += "<br>";
-        }
-        document.write(print_To_The_Screen);
-    }
-
-    function part2CaseStudyBai1() {
-        let salary;
-        do {
-            salary = +prompt("Nhập vào đây mức lương của bạn ");
-        } while (salary < 0);
-        let tax;
-        if (salary < 7000000) {
-            tax = salary / 100 * 5;
-            alert("Thuế bạn cần phải đóng là :" + tax + "vnd");
-            alert("lương của bạn sau khi trừ thuế là :" + (salary - tax) + "vnd");
-        } else {
-            if (7000 <= salary < 15000000) {
-                tax = salary / 100 * 10;
-                alert("Thuế bạn cần phải đóng là :" + tax + "vnd");
-                alert("lương của bạn sau khi trừ thuế là :" + (salary - tax) + "vnd");
-            } else {
-                if (salary >= 15000000) {
-                    tax = salary / 100 * 20;
-                    alert("Thuế bạn cần phải đóng là :" + tax + "vnd");
-                    alert("lương của bạn sau khi trừ thuế là :" + (salary - tax) + "vnd");
-                }
-            }
-        }
-    }
-
-    function part2CaseStudyBai2() {
-        let alphabet = prompt("Nhập vào đây chữ cái cần kiểm tra là nguyên âm hay phụ âm");
-        switch (alphabet) {
-            case "u ":
-            case "e":
-            case "o":
-            case "a":
-            case "i":
-            case "U":
-            case "E":
-            case "O":
-            case "A":
-            case "I":
-                alert("Chữ cái " + alphabet + " là một nguyên âm");
-                break;
-            case "b":
-            case "c":
-            case "d":
-            case "f":
-            case "g":
-            case "h":
-            case "j":
-            case "k":
-            case "l":
-            case "m":
-            case "n":
-            case "p":
-            case "q":
-            case "r":
-            case "s":
-            case "t":
-            case "v":
-            case "w":
-            case "x":
-            case "y":
-            case "z":
-            case "B":
-            case "C":
-            case "D":
-            case "F":
-            case "G":
-            case "H":
-            case "J":
-            case "K":
-            case "L":
-            case "M":
-            case "N":
-            case "P":
-            case "Q":
-            case "R":
-            case "S":
-            case "T":
-            case "V":
-            case "W":
-            case "X":
-            case "Y":
-            case "Z":
-                alert("Chữ cái " + alphabet + " là một phụ âm");
-                break;
-            default :
-                alert("Không tìm thấy hoặc bạn nhập vào không đúng");
-        }
-    }
-
-    function part3CaseStudyBai1() {
-        let n = +prompt("Nhập vào đây số phần tử có trong mảng ");
-        let arr_a = [];
-        let arr_b = [];
-        let push = 0;
-        for (let i = 0; i < n; i++) {
-            arr_a[i] = +prompt("Nhập vào đây phần tử thứ " + (i + 1) + "của mảng a");
-        }
-        for (let i = 0; i < n; i++) {
-            push += arr_a [i]
-            arr_b[i] = push;
-        }
-        alert("Prefix sums của mảng a là : " + arr_b);
-    }
-
-    function part3CaseStudyBai2() {
-        let n_a = +prompt("Nhập vào đây số phần tử của mảng a");
-        let arr_a = [];
-        let n_b = +prompt("Nhập vào đây số phần tử của mảng b");
-        let arr_b = [];
-        for (let i = 0; i < n_a; i++) {
-            arr_a[i] = +prompt("Nhập vào đây giá trị của phần tử thứ " + (i + 1) + "của mảng a :");
-        }
-        for (let i = 0; i < n_b; i++) {
-            arr_b[i] = +prompt("Nhập vào đây giá trị của phần tử thứ " + (i + 1) + "của mảng b :");
-        }
-        let missing_Value = "";
-        let a = Array();
-        let c = 1;
-        for (let i = 0; i < n_a; i++) {
-            for (let j = 0; j < n_b; j++) {
-                if (arr_a[i] === arr_b[j]) {
-                    for (let k = 0; k < c; k++) {
-                        a[k] = arr_a[i];
-                    }
-                }
-            }
-            if (a.length === 0) {
-                missing_Value += arr_a[i] + ", ";
-            } else {
-                a = [];
-            }
-        }
-        for (let i = 0; i < n_b; i++) {
-            for (let j = 0; j < n_a; j++) {
-                if (arr_b[i] === arr_a[j]) {
-                    for (let k = 0; k < c; k++) {
-                        a[k] = arr_b[i];
-                    }
-                }
-            }
-            if (a.length === 0) {
-                missing_Value += arr_b[i] + ", ";
-            } else {
-                a = [];
-            }
-        }
-        alert("Prefix Sums [ A , B ] = " + missing_Value);
-    }
-
-    function part3CaseStudyBai3() {
-        let n = +prompt("Nhập vào đây số lượng phân số cần kiểm tra");
-        let arr_numerators = [];
-        let arr_denominators = [];
-        let fractons = Array();
-        let printFractions = Array();
-        let printToScreen = "";
-        let maxFractions = 0;
-        for (let i = 0; i < n; i++) {
-            arr_numerators[i] = +prompt("Nhập vào đây tử số của phần tử thứ " + (i + 1));
-            do {
-                arr_denominators[i] = +prompt("Nhập vào đây mẫu số của phần tử thứ " + (i + 1));
-            } while (arr_denominators[i] === 0);
-            fractons[i] = arr_numerators[i] / arr_denominators[i];
-            printFractions[i] = arr_numerators[i] + "/" + arr_denominators[i];
-        }
-        for (let i = 0; i < fractons.length; i++) {
-            if (maxFractions < fractons[i]) {
-                maxFractions = fractons[i];
-                printToScreen = "Phân số lớn nhất là = " + printFractions[i] + " và có chỉ số là : " + i;
-            }
-        }
-        alert(printToScreen);
-    }
-
-    function part3CaseStudyBai4() {
-        let number = prompt("Nhập số cần đọc ra màn hình");
-        let letter = ["Không","Một","Hai","Ba","Bốn","Năm","Sáu","Bảy","Tám","Chín"];
-        let printToTheScreen = "";
-        for (let i = 0; i < number.length; i++) {
-            printToTheScreen += letter[number[i]] + " ";
-
-        }
-        alert(printToTheScreen);
-        alert(typeof number);
-    }
-
-    function part3CaseStudyBai5() {
-        let a = '<h2 style="color: red; text-align: center; font-size: 40px">MENU</h2>\n' +
-            '<form style="font-size: 50px" id="bbbb">\n' +
-            '    <input style="width: 30px; height: 30px" type="checkbox" id="cafe" onclick="checkPriceOfProducPart3CaseStudyBai5(this.value)" value=12000>\n' +
-            '    <label for="cafe" >1. Cafe</label><br>\n' +
-            '    <input style="width: 30px; height: 30px" type="checkbox" id="camvat" onclick="checkPriceOfProducPart3CaseStudyBai5(this.value)" value=20000>\n' +
-            '    <label for="camvat" >2. Cam Vắt</label><br>\n' +
-            '    <input style="width: 30px; height: 30px" type="checkbox" id="nuocepcarot" onclick="checkPriceOfProducPart3CaseStudyBai5(this.value)" value=20000>\n' +
-            '    <label for="nuocepcarot" >3. Nước Ép Cà Rốt</label><br>\n' +
-            '    <input style="width: 30px; height: 30px" type="checkbox" id="nuocepcachua" onclick="checkPriceOfProducPart3CaseStudyBai5(this.value)" value=20000>\n' +
-            '    <label for="nuocepcachua" >4. Nước Ép Cà Chua</label><br>\n' +
-            '    <input style="width: 30px; height: 30px" type="checkbox" id="nuocloc" onclick="checkPriceOfProducPart3CaseStudyBai5(this.value)" value=7000>\n' +
-            '    <label for="nuocloc" >5. Nước Lọc</label><br>\n' +
-            '    <input style="width: 30px; height: 30px" type="checkbox" id="nuocdua" onclick="checkPriceOfProducPart3CaseStudyBai5(this.value)" value=25000>\n' +
-            '    <label for="nuocdua" >6. Nước Dừa</label><br>\n' +
-            '    <button style="width: 200px; height: 50px; font-size: 30px; border-color: lawngreen; border-width: 5px" type="button" onclick="printToTheScreenPart3CaseStudyBai5()">Thanh toán </button>\n' +
-            '</form>'
-
-        document.write(a);
-    }
-    let bill_part3casestudybai5 = 0;
-    function checkPriceOfProducPart3CaseStudyBai5(check) {
-        let amount = +prompt("Nhập vào đây số lượng khách yêu cầu");
-        bill_part3casestudybai5 += check * amount;
-    }
-
-    function printToTheScreenPart3CaseStudyBai5() {
-        alert("Tổng tiền quý khách cần thanh toán là :" + bill + " VND");
-    }
-
     function part4CaseStudyBai1() {
 
     }
-
 </script>
+
 </body>
 </html>
