--- a/test/Case Study/case_study.html
+++ b/test/Case Study/case_study.html
@@ -86,7 +86,7 @@
 <button type="button" onclick="part3CaseStudyBai5()">Bài 5</button>
 <hr>
 <h1>Part 4: YÊU CẦU 4 ( STRING )</h1>
-<h2>Bài 1: Viết một hàm chuẩn hóa xâu ký tự: biến đổi xâu ký tự thành xâu sao cho trong xâu không có 2 dấu cách liền nhau và bắt đầu mỗi từ phải in hoa. Ví dụ tRuong    TaN   HAI => Truong Tan Hai.</h2>
+<h2>Bài 1: Viết một hàm chuẩn hóa xâu ký tự: biến đổi xâu ký tự thành xâu sao cho trong xâu không có 2 dấu cách liền nhau và bắt đầu mỗi từ phải in hoa. Ví dụ tRuong &nbsp;&nbsp;&nbsp;&nbsp; TaN &nbsp;&nbsp;&nbsp;&nbsp; HAI => Truong Tan Hai.</h2>
 <h2>Và một hàm tìm từ dài nhất trong 1 xâu ký tự. Hàm main sử dụng các hàm này để nhập xâu ký tự từ bàn phím, in ra xâu trước và sau khi chuẩn hóa, 1 từ dài nhất trong xâu đó.</h2>
 <button type="button" onclick="part4CaseStudyBai1()">Bài 1</button>
 
@@ -101,12 +101,7 @@
 <script src="part3CaseStudyBai3.js"></script>
 <script src="part3CaseStudyBai4.js"></script>
 <script src="part3CaseStudyBai5.js"></script>
-
-<script>
-    function part4CaseStudyBai1() {
-
-    }
-</script>
+<script src="part4CaseStudyBai1.js"></script>
 
 </body>
 </html>
