--- a/test/test.html
+++ b/test/test.html
@@ -5,6 +5,16 @@
     <title>Title</title>
 </head>
 <body>
-<input type="number">
+<button type="button" onclick="part4CaseStudyBai1()">hhhh</button>
+<script>
+    function part4CaseStudyBai1() {
+        let something = prompt("Nhập vào đây một chuỗi nào đó");
+
+        for (let i = 0; i < something.length ; i++) {
+            if (something[i] === )
+        }
+        alert(print);
+    }
+</script>
 </body>
 </html>
