--- a/test/Case Study/case_study.html
+++ b/test/Case Study/case_study.html
@@ -89,7 +89,14 @@
 <h2>Bài 1: Viết một hàm chuẩn hóa xâu ký tự: biến đổi xâu ký tự thành xâu sao cho trong xâu không có 2 dấu cách liền nhau và bắt đầu mỗi từ phải in hoa. Ví dụ tRuong &nbsp;&nbsp;&nbsp;&nbsp; TaN &nbsp;&nbsp;&nbsp;&nbsp; HAI => Truong Tan Hai.</h2>
 <h2>Và một hàm tìm từ dài nhất trong 1 xâu ký tự. Hàm main sử dụng các hàm này để nhập xâu ký tự từ bàn phím, in ra xâu trước và sau khi chuẩn hóa, 1 từ dài nhất trong xâu đó.</h2>
 <button type="button" onclick="part4CaseStudyBai1()">Bài 1</button>
-
+<h2>Bài 2: Cho xâu kí tự. Hãy đếm số lượng kí tự khác nhau trong xâu đó</h2>
+<h2>Ví dụ: s = "cabca", thì kết quả differentSymbolsNaive(s) = 3.</h2>
+<h2>⇨Có 3 kí tự khác nhau là a, b và c.</h2>
+<button type="button" onclick="part4CaseStudyBai2()">Bài 2</button>
+<h2>Bài 3: Cho hai xâu kí tự, tìm số lượng kí tự chung giữa chúng.</h2>
+<h2>Ví dụ: s1 = "aabcc" và s2 = "adcaa", thì kết quả commonCharacterCount(s1, s2) = 3.</h2>
+<h2>⇨2 xâu s1 và s2 có 3 kí tự chung: 2 kí tự 'a' và 1 kí tự 'c'.</h2>
+<button type="button" onclick="part4CaseStudyBai3()">Bài 3</button>
 <script src="part1CaseStudyBai1.js"></script>
 <script src="part1CaseStudyBai2.js"></script>
 <script src="part1CaseStudyBai3.js"></script>
@@ -102,6 +109,7 @@
 <script src="part3CaseStudyBai4.js"></script>
 <script src="part3CaseStudyBai5.js"></script>
 <script src="part4CaseStudyBai1.js"></script>
-
+<script src="part4CaseStudyBai2.js"></script>
+<script src="part4CaseStudyBai3.js"></script>
 </body>
 </html>
