--- a/test/Case Study/case_study.html
+++ b/test/Case Study/case_study.html
@@ -19,7 +19,7 @@
             height: 50px;
             font-size: 20px;
             color: darkgreen;
-            border-color: lawngreen;
+            border-color: red;
             border-width: 5px;
         }
 
