--- a/test/test.html
+++ b/test/test.html
@@ -7,13 +7,10 @@
 <body>
 <button type="button" onclick="part4CaseStudyBai1()">hhhh</button>
 <script>
+    let arr = ["c","a","b","c","a"];
     function part4CaseStudyBai1() {
-        let something = prompt("Nhập vào đây một chuỗi nào đó");
-
-        for (let i = 0; i < something.length ; i++) {
-            if (something[i] === )
-        }
-        alert(print);
+          arr.splice(0,2);
+          alert(arr);
     }
 </script>
 </body>
