--- a/test/Case Study/case_study.html
+++ b/test/Case Study/case_study.html
@@ -97,6 +97,13 @@
 <h2>Ví dụ: s1 = "aabcc" và s2 = "adcaa", thì kết quả commonCharacterCount(s1, s2) = 3.</h2>
 <h2>⇨2 xâu s1 và s2 có 3 kí tự chung: 2 kí tự 'a' và 1 kí tự 'c'.</h2>
 <button type="button" onclick="part4CaseStudyBai3()">Bài 3</button>
+<h1>Part 5: Yêu cầu 5 (Mảng 2 chiều)</h1>
+<h2>Bài 1: Viết hàm tính tổng các số chẵn trong ma trận có kích thước m*n. Với m, n là các số nhập từ bàn phím</h2>
+<button type="button" onclick="part5CaseStudyBai1()">Bài 1</button>
+<h2>Bài 2: Viết hàm liệt kê các số nguyên tố trong mảng 2 chiều, đếm các số nguyên tố có trong mảng đó.</h2>
+<button type="button" onclick="part5CaseStudyBai2()">Bài 2</button>
+<h2>Bài 3: Viết hàm tìm giá trị lớn nhất, nhỏ nhất trong mảng 2 chiều</h2>
+<button type="button" onclick="part5CaseStudyBai3()">Bài 3</button>
 <script src="part1CaseStudyBai1.js"></script>
 <script src="part1CaseStudyBai2.js"></script>
 <script src="part1CaseStudyBai3.js"></script>
@@ -111,5 +118,8 @@
 <script src="part4CaseStudyBai1.js"></script>
 <script src="part4CaseStudyBai2.js"></script>
 <script src="part4CaseStudyBai3.js"></script>
+<script src="part5CaseStudyBai1.js"></script>
+<script src="part5CaseStudyBai2.js"></script>
+<script src="part5CaseStudyBai3.js"></script>
 </body>
 </html>
