--- a/test/demo_obj.html
+++ b/test/demo_obj.html
@@ -8,7 +8,24 @@
 <button type="button" onclick="demoObj()">hhh</button>
 <script>
     function demoObj() {
-        let a = {a:12, b:2, c:66};
+        let student1 ={
+            id: 1,
+            name: 'Ty',
+            age: 18,
+            study(subject){
+                console.log("học viên tên "+ this.name + "đang học môn : "+ subject)
+            }
+        }
+        let student2 ={
+            id: 1,
+            name: 'Tý',
+            age: 18,
+            study(subject){
+                console.log("học viên tên "+ this.name + "đang học môn : "+ subject)
+            }
+        }
+        console.log("tên học viên: " +student1.name);
+        student1.study("JS");
         
     }
 </script>
