--- a/HTML vs Javascript/test/game.html
+++ b/HTML vs Javascript/test/game.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<h1>WELCOME TO MY TEAM GAME</h1>
+<h1 STYLE="color: red; text-align: center">CỬA HÀNG DI ĐỘNG TIẾN THANH</h1>
+
 <script>
     
 </script>
