--- a/HTML vs Javascript/test/xay_dung_trang_web_ca_nhan/web.html
+++ b/HTML vs Javascript/test/xay_dung_trang_web_ca_nhan/web.html
@@ -4,29 +4,58 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="web.css">
 </head>
 <body>
-<div id="carouselExample" class="carousel slide">
+<header>
+    <h1 id="vv">Xây dựng 1 trang web cá nhân</h1>
+</header>
+<div>
+<div style=" width: 25%; height: 100px; float: right" id="carouselExampleIndicators" class="carousel slide">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="20210821_195434.jpg" class="d-block w-100">
+            <img src="x4.jpg" class="d-block w-100" alt="">
         </div>
         <div class="carousel-item">
-            <img src="D3CEF445-88DD-4F05-8644-85F6FF73CE06.jpg" class="d-block w-100">
+            <img src="x2.jpg" class="d-block w-100" alt="">
         </div>
         <div class="carousel-item">
-            <img src="5ED25704-4A56-49FC-8DD4-CBF77A5E413A.jpg" class="d-block w-100">
+            <img src="x1.jpg" class="d-block w-100" alt="">
         </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+<div id="if">
+    <h1>TRẦN PHƯỚC NHẬT TIẾN</h1>
+    <p>Birthday: 22 - 04 -2003</p>
+    <p>Gender: Female</p>
+    <p>Address: Thị trấn Đông Phú, huyện Quế Sơn, Tỉnh Quảng Nam</p>
+    <p>Phone number: 0935430002</p>
+    <p>My hobies are: Likes to stay at home to code, like to play badminton,
+        gambling enthusiast</p>
+    <p>Email: tientpnse170390@fpt.edu.vn</p>
+    <p>Skill: Single</p>
 
+</div>
+
+</div>
+<footer>
+    <h1>Thank you for reading</h1>
+</footer>
 </body>
 </html>
+
+
