--- a/HTML vs Javascript/test/bootstrap.html
+++ b/HTML vs Javascript/test/bootstrap.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-<!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
-    <link href="bootstrap-5.3.0-alpha1-dist/bootstrap-5.3.0-alpha1-dist/css/bootstrap.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<!--    <link href="bootstrap-5.3.0-alpha1-dist/bootstrap-5.3.0-alpha1-dist/css/bootstrap.css" rel="stylesheet">-->
 </head>
 <body>
-
-<table class="table">
+<table class="table table-hover">
     <thead>
     <tr>
         <th scope="col">#</th>
@@ -32,7 +31,7 @@
     </tr>
     <tr>
         <th scope="row">3</th>
-        <td colspan="2">Larry the Bird</td>
+        <td >Larry the Bird</td>
         <td>@twitter</td>
     </tr>
     </tbody>
