--- a/HTML vs Javascript/test/screen_lock.html
+++ b/HTML vs Javascript/test/screen_lock.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
     <style>
         #circle {
             width: 100px;
@@ -20,7 +23,6 @@
             position: absolute;
             background-color: blue;
             height: 2px;
-            width: 0;
             display: none;
         }
     </style>
@@ -30,36 +32,44 @@
 <div id="line"></div>
 
 <script>
-    var circle = document.getElementById('circle');
-    var line = document.getElementById('line');
+    $(document).ready(function() {
+        var $circle = $('#circle');
+        var $line = $('#line');
 
-    circle.addEventListener('mousedown', function() {
-        line.style.display = 'block';
-        document.addEventListener('mousemove', moveLine);
+        $circle.mousedown(function(event) {
+            var circleCenterX = $circle.offset().left + ($circle.width() / 2);
+            var circleCenterY = $circle.offset().top + ($circle.height() / 2);
+
+            $line.css({
+                'display': 'block',
+                'left': circleCenterX + 'px',
+                'top': circleCenterY + 'px'
+            });
+
+            $(document).mousemove(function(event) {
+                var mouseX = event.clientX;
+                var mouseY = event.clientY;
+
+                var deltaX = mouseX - circleCenterX;
+                var deltaY = mouseY - circleCenterY;
+
+                var lineLength = Math.sqrt(deltaX * deltaX + deltaY * deltaY);
+                var angle = Math.atan2(deltaY, deltaX);
+
+                $line.css({
+                    'width': lineLength + 'px',
+                    'transform': 'rotate(' + angle + 'rad)',
+                    'left': circleCenterX + 'px',
+                    'top': circleCenterY + 'px'
+                });
+            });
+        });
+
+        $(document).mouseup(function() {
+            $line.hide();
+            $(document).off('mousemove');
+        });
     });
-
-    circle.addEventListener('mouseup', function() {
-        line.style.display = 'none';
-        document.removeEventListener('mousemove', moveLine);
-    });
-
-    function moveLine(event) {
-        var centerX = circle.offsetLeft + (circle.offsetWidth / 2);
-        var centerY = circle.offsetTop + (circle.offsetHeight / 2);
-        var mouseX = event.clientX;
-        var mouseY = event.clientY;
-
-        var deltaX = mouseX - centerX;
-        var deltaY = mouseY - centerY;
-        var distance = Math.sqrt(deltaX * deltaX + deltaY * deltaY);
-
-        var lineLength = distance + 'px';
-        var angle = Math.atan2(deltaY, deltaX) * 180 / Math.PI;
-
-        line.style.width = lineLength;
-        line.style.transform = 'rotate(' + angle + 'deg)';
-    }
 </script>
-
 </body>
 </html>
