--- a/HTML vs Javascript/test/screen_lock.html
+++ b/HTML vs Javascript/test/screen_lock.html
@@ -1,73 +1,118 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Hình vuông 3x3</title>
     <style>
-        #circle {
-            width: 100px;
-            height: 100px;
+        .container {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-gap: 10px;
+            width: 400px;
+            margin: 0 auto;
+        }
+
+        .outer-circle {
+            width: 120px;
+            height: 120px;
             border-radius: 50%;
-            background-color: red;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
+            border: 2px solid black;
+            background-color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             cursor: pointer;
         }
 
-        #line {
+        .inner-circle {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            background-color: black;
+        }
+
+        .line {
             position: absolute;
-            background-color: blue;
-            height: 2px;
-            display: none;
+            background-color: red;
         }
     </style>
 </head>
 <body>
-<div id="circle"></div>
-<div id="line"></div>
+<div class="container">
+    <div class="outer-circle">
+        <div class="inner-circle"></div>
+    </div>
+    <div class="outer-circle">
+        <div class="inner-circle"></div>
+    </div>
+    <div class="outer-circle">
+        <div class="inner-circle"></div>
+    </div>
+    <div class="outer-circle">
+        <div class="inner-circle"></div>
+    </div>
+    <div class="outer-circle">
+        <div class="inner-circle"></div>
+    </div>
+    <div class="outer-circle">
+        <div class="inner-circle"></div>
+    </div>
+    <div class="outer-circle">
+        <div class="inner-circle"></div>
+    </div>
+    <div class="outer-circle">
+        <div class="inner-circle"></div>
+    </div>
+    <div class="outer-circle">
+        <div class="inner-circle"></div>
+    </div>
+</div>
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     $(document).ready(function() {
-        var $circle = $('#circle');
-        var $line = $('#line');
+        var isMouseDown = false;
+        var currentCircle = null;
+        var line = null;
 
-        $circle.mousedown(function(event) {
-            var circleCenterX = $circle.offset().left + ($circle.width() / 2);
-            var circleCenterY = $circle.offset().top + ($circle.height() / 2);
+        $('.outer-circle').mousedown(function(e) {
+            isMouseDown = true;
+            currentCircle = $(this);
+            var circlePosition = currentCircle.offset();
+            var startX = circlePosition.left + currentCircle.width() / 2;
+            var startY = circlePosition.top + currentCircle.height() / 2;
 
-            $line.css({
-                'display': 'block',
-                'left': circleCenterX + 'px',
-                'top': circleCenterY + 'px'
+            line = $('<div class="line"></div>');
+            line.css({
+                left: startX + 'px',
+                top: startY + 'px'
             });
+            $('body').append(line);
+        });
 
-            $(document).mousemove(function(event) {
-                var mouseX = event.clientX;
-                var mouseY = event.clientY;
-
-                var deltaX = mouseX - circleCenterX;
-                var deltaY = mouseY - circleCenterY;
-
-                var lineLength = Math.sqrt(deltaX * deltaX + deltaY * deltaY);
+        $(document).mousemove(function(e) {
+            if (isMouseDown && currentCircle !== null) {
+                var circlePosition = currentCircle.offset();
+                var centerX = circlePosition.left + currentCircle.width() / 2;
+                var centerY = circlePosition.top + currentCircle.height() / 2;
+                var endX = e.pageX;
+                var endY = e.pageY;
+                var deltaX = endX - centerX;
+                var deltaY = endY - centerY;
                 var angle = Math.atan2(deltaY, deltaX);
-
-                $line.css({
-                    'width': lineLength + 'px',
-                    'transform': 'rotate(' + angle + 'rad)',
-                    'left': circleCenterX + 'px',
-                    'top': circleCenterY + 'px'
+                var distance = Math.sqrt(deltaX * deltaX + deltaY * deltaY);
+                line.css({
+                    width: distance + 'px',
+                    transform: 'translate(' + centerX + 'px, ' + centerY + 'px) rotate(' + angle + 'rad)'
                 });
-            });
+            }
         });
 
         $(document).mouseup(function() {
-            $line.hide();
-            $(document).off('mousemove');
+            isMouseDown = false;
+            if (currentCircle !== null) {
+                currentCircle = null;
+                line.remove();
+            }
         });
     });
 </script>
